# quantum-tomography

./: .env  .gitattributes  README.md  pyproject.toml  requirements.txt
configs/: config_priority_a.yaml  config_priority_b.yaml  config_priority_c.yaml  config_priority_d.yaml
experiments/: __init__.py  run_all.py  run_priority_a.py  run_priority_b.py  run_priority_c.py  run_priority_d.py
notebooks/: 01_data_exploration.ipynb  02_single_experiment.ipynb  03_results_analysis.ipynb  3.ipynb
paper/: quantum_tomography_paper.tex  table1_main_results.tex  table2_measurement_comparison.tex  table3_shots_noise.tex
paper/tables/: measurement_comparison.csv  measurement_comparison.tex  priority_summary.csv  priority_summary.tex
results/expt_3/: FINAL_REPORT.txt  priority_a_aggregated.csv  priority_a_summary.csv  priority_b_aggregated.csv  priority_b_summary.csv  priority_c_aggregated.csv  priority_c_summary.csv  priority_d_aggregated.csv  priority_d_summary.csv
scripts/: aggregate_results.py  create_summary_tables.py  export_for_paper.py  generate_paper_figures.py
src/: __init__.py  data_generation.py  evaluation.py  models.py  training.py  visualization.py
tests/: __init__.py  test_data_generation.py  test_measurements.py  test_models.py
