[project]
name = "quantum-tomography"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaathavan18",email = "jaathavan18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "qiskit (>=2.2.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "qiskit-ibm-runtime (>=0.42.0,<0.43.0)",
    "qiskit-aer (>=0.17.2,<0.18.0)",
    "qiskit-experiments (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook (>=7.4.7,<8.0.0)"
]

[tool.poetry.dependencies]
torch = { url = "https://download.pytorch.org/whl/nightly/cu130/torch-2.10.0%2Bcu130-cp310-cp310-win_amd64.whl" }
